[workspace]
members = [
    "rpg-cli",
    "rpg-commons-dioxus",
    "rpg-commons-native",
    "rpg-core",
    "rpg-dioxus-cli",
    "rpg-dioxus-desktop",
    "rpg-dioxus-mobile",
    "rpg-dioxus-web",
    "rpg-gtk",
    "rpg-server",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
