[package]
name = "rpg-toolkit"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.4", features = ["cargo"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
reedline-repl-rs = { version = "1.1.1", features = ["async"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
