[package]
name = "rpg-toolkit"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.21", features = ["cargo"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
reedline-repl-rs = { version = "1.2.1", features = ["async"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
