[package]
name = "rpg-commons"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
prost = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "0.10.2"
