[package]
name = "rpg-core"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
