[package]
name = "rpg-dioxus-desktop"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
dioxus = "0.4.3"
dioxus-desktop = "0.4.3"
dioxus-html = "0.4.3"
rpg-commons-dioxus = { path = "../rpg-commons-dioxus" }
rpg-commons-native = { path = "../rpg-commons-native" }
rpg-core = { path = "../rpg-core" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
