[package]
name = "rpg-dioxus-mobile"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rpg-dioxus-mobile-desktop"
path = "gen/bin/desktop.rs"

[package.metadata.cargo-android]
app-activity-name = "pl.wrzasq.rpg_dioxus_mobile.MainActivity"
app-dependencies = [
    "androidx.webkit:webkit:1.6.1",
    "androidx.appcompat:appcompat:1.6.1",
    "com.google.android.material:material:1.8.0",
]
project-dependencies = [ "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21" ]
app-plugins = [ "org.jetbrains.kotlin.android" ]
app-permissions = [ "android.permission.INTERNET" ]
app-theme-parent = "Theme.MaterialComponents.DayNight.DarkActionBar"
vulkan-validation = false

[package.metadata.cargo-android.env-vars]
WRY_ANDROID_PACKAGE = "pl.wrzasq.rpg_dioxus_mobile"
WRY_ANDROID_LIBRARY = "rpg_dioxus_mobile"
WRY_ANDROID_KOTLIN_FILES_OUT_DIR = "<android-project-dir>/app/src/main/kotlin/pl/wrzasq/rpg_dioxus_mobile"

[package.metadata.cargo-apple.ios]
frameworks = [ "WebKit" ]

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.74"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
dioxus = "0.4.3"
dioxus-desktop = { version = "0.4.3", default-features = false, features = ["tokio_runtime"] }
dioxus-html = "0.4.3"
futures = "0.3.30"
log = "0.4.11"
prost = "0.12.3"
rpg-commons-dioxus = { path = "../rpg-commons-dioxus" }
rpg-core = { path = "../rpg-core" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = "1.36.0"
tonic = { version = "0.10.2" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wry = "0.28.0"

[build-dependencies]
tonic-build = "0.10.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
jni = "0.19.0"
paste = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.9.0"

[target.'cfg(target_os = "ios")'.dependencies]
core-foundation = "0.9.3"
