[package]
name = "rpg-dioxus-web"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
dioxus = "0.4.3"
dioxus-html = "0.4.3"
dioxus-web = "0.4.3"
futures = "0.3.30"
prost = "0.12.3"
rpg-commons-dioxus = { path = "../rpg-commons-dioxus"}
rpg-commons-wasm = { path = "../rpg-commons-wasm"}
rpg-core = { path = "../rpg-core" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = "1.36.0"
tonic = { version = "0.10.2", default-features = false, features = ["codegen", "prost"] }
tonic-web-wasm-client = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = { version = "0.10.2", default-features = false, features = ["prost"] }
