[package]
name = "rpg-dioxus-web"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
dioxus = "0.4.3"
dioxus-html = "0.4.3"
dioxus-web = "0.4.3"
futures = "0.3.30"
prost = "0.12.4"
rpg-commons-dioxus = { path = "../rpg-commons-dioxus"}
rpg-core = { path = "../rpg-core" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = "1.37.0"
tonic = { version = "0.11.0", default-features = false, features = ["codegen", "prost"] }
tonic-web-wasm-client = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = { version = "0.11.0", default-features = false, features = ["prost"] }
