[package]
name = "rpg-repl"
version = "0.0.1"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
prost = "0.12.3"
reedline-repl-rs = { version = "1.0.7", features = ["async"] }
rpg-commons = { path = "../rpg-commons" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
