[package]
name = "rpg-server"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
dbus = "0.9.7"
dbus-tokio = "0.7.6"
prost = "0.12.4"
rpg-commons-native = { path = "../rpg-commons-native" }
rpg-core = { path = "../rpg-core" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
